<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="@dimen/margin_small"
            android:scaleType="fitCenter"
            android:src="@drawable/doll" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/example_name"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/black"
                android:textSize="@dimen/text_big" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/priceText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:text="@string/currency"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:text="@string/price_example"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/product_in_Stock"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:text="@string/in_stock"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium" />

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:text="@string/example_pieces"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/sale_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_margin"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:text="@string/sale_button"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>